HaiYang/Fu Ying | N/A fix the style on ie7

--- a/datawinners/media/css/plugins/960gd/ie7.css
+++ b/datawinners/media/css/plugins/960gd/ie7.css
@@ -38,9 +38,7 @@
     margin-left: 13px;
 }
 
-#question_form #questions-panel .que_num li {
-    margin-left: 23px;
-}
+
 
 .container_24 .grid_23 .data_ana{
     clear: both;
